# custom-dictionary-generator

./: .gitignore  README.md  pyproject.toml
eaps_dict/: __init__.py  cli.py  compiler.py  generator.py  models.py  parser.py
makedict/: cli.py  compiler.py  generator.py  models.py  parser.py  preprocessing.py
templates/: dictionary_template.xml  meaning_templates.json  plist_template.plist  term_templates.json
tests/: test_generator.py  test_models.py  test_parser.py
