[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eaps_dict"
version = "0.1.0a0"
description = "A Python tool to generate and compile Earth and Planetary Science dictionaries for macOS."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "En-Chi Lee" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS",
]
dependencies = [
    "pandas>=2.3.3",
]

[tool.setuptools]
packages = ["eaps_dict"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
eaps-dict = "eaps_dict.cli:main"
