[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "makedict"
version = "0.1.0a0"
description = "A Python tool to generate and compile dictionaries for macOS from csv files."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "En-Chi Lee" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS",
]
dependencies = ["pandas>=2.3.3", "pyyaml>=6.0.3"]

[tool.setuptools]
packages = ["makedict"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
makedict = "makedict.cli:main"
